--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,16 @@
 	margin-right: 0;
 }
 
+.deruino {
+	color: white;
+	font-size: calc(1rem + 2vw);
+	z-index: 9999;
+	position: fixed;
+	top: 5%;
+	left: 5%;
+	font-weight: bolder;
+}
+
 .myborder {
 	border: 1px solid red;
 }
